--- a/src/ios/Info.plist
+++ b/src/ios/Info.plist
@@ -5,7 +5,7 @@
 	<key>SSOAppId</key>
 	<string>10885</string>
 	<key>SSOAppKey</key>
-	<string>43C18306BB4F2B57E054000B5DE0B7FC</string>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
